Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman Azteca: Choque de imperios -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ted -->
+<li>
+  <a href="../Peliculas/pelicula738.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1DY7eSoQLoTNhJTT455N74VuHHx.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ted 2012</span>
+    <span class="hidden">Cuando John Bennett (Mark Wahlberg) era pequeño, deseaba que su osito de peluche Ted fuera un oso de verdad y, por desgracia, su sueño se hizo realidad. Más de veinte años después, Ted sigue con John y saca de quicio a su novia Lori, que empieza a perder la paciencia. Para colmo, a John no parece preocuparle su futuro profesional y se pasa la vida fumando porros con Ted. A pesar de ello, John intenta alcanzar la madurez, pero parece que para conseguirlo le resulta indispensable la ayuda de Ted.</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman Azteca: Choque de imperios -->
 <li>
   <a href="../Peliculas/pelicula737.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
