--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ted -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ted 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula739.html">
+    <img src="https://image.tmdb.org/t/p/original/bO59Vn36fQauTDQpKNlHxvcK9Nw.jpg" alt="Ted 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ted 2</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Ted -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula738.html">
     <img src="https://image.tmdb.org/t/p/original/1DY7eSoQLoTNhJTT455N74VuHHx.jpg" alt="Ted" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
