Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ted -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ted 2 -->
+<li>
+  <a href="../Peliculas/pelicula739.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bO59Vn36fQauTDQpKNlHxvcK9Nw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ted 2 2015</span>
+    <span class="hidden">Se trata de una secuela de la exitosa comedia escrita y dirigida por el cómico Seth MacFarlane. Recién casados Ted y Tami-Lynn deciden tener un bebé. John se ofrece en donar su esperma para que su mejor amigo pueda cumplir su sueño de tener un hijo, pero inesperadamente reciben una carta legal que dice que el estado no le permite ser padre ya que no está demostrado que sea una persona. Todos juntos tendrán que unir fuerzas para luchar por sus derechos en un tribunal de justicia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ted -->
 <li>
   <a href="../Peliculas/pelicula738.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
