--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hernan -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ted -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie83.html">
+    <img src="https://image.tmdb.org/t/p/original/iKmLCDudQXXOZr16bB7ApT7jXo3.jpg" alt="ted" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">ted</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Hernan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie82.html">
     <img src="https://image.tmdb.org/t/p/original/adJ2jnpz77ai4coQqNzzBQ0OiXN.jpg" alt="Hernán" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
