Crear/Actualizar Plataforma/universal/index.html

--- a/Plataforma/universal/index.html
+++ b/Plataforma/universal/index.html
@@ -218,7 +218,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ted 2 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ted -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie83.html">
+    <img src="https://image.tmdb.org/t/p/original/iKmLCDudQXXOZr16bB7ApT7jXo3.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">ted</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Ted 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula739.html">
     <img src="https://image.tmdb.org/t/p/original/bO59Vn36fQauTDQpKNlHxvcK9Nw.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
