--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ted 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ted -->
+<li>
+  <a href="../Series/serie83.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iKmLCDudQXXOZr16bB7ApT7jXo3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">ted 2024</span>
+    <span class="hidden">Es 1993 y el momento de fama del oso Ted ha pasado, dejándolo viviendo con su mejor amigo, John Bennett, de 16 años, que vive en una casa de clase trabajadora de Boston con sus padres y su primo. Puede que Ted no sea la mejor influencia para John, pero a fin de cuentas, está dispuesto a arriesgarse para ayudar a su amigo y su familia. Precuela de las películas de “Ted”.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ted 2 -->
 <li>
   <a href="../Peliculas/pelicula739.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
