--- a/Series/serie83.html
+++ b/Series/serie83.html
@@ -1,325 +1,39 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ted</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-<style>
-.scrollbar-hide::-webkit-scrollbar { display: none; }
-.scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
-body, html { margin: 0; padding: 0; height: 100%; font-family: "Poppins", sans-serif; }
-body::before {
-  content: "";
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-image: url('https://image.tmdb.org/t/p/w1280/cFyp7F8qiBSuSj1qhUnu8MDvubl.jpg');
-  background-size: cover;
-  background-position: center;
-  z-index: -2;
-}
-body::after {
-  content: "";
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.75);
-  z-index: -1;
-}
-#iframe-principal { width: 100%; height: 220px; border: none; background: black; }
-#contenedor-video { position: fixed; top: 0; left: 0; width: 100%; z-index: 10; }
-.capitulo-seleccionado { background-color: #FF0000 !important; color: #fff !important; font-weight: bold; border-bottom: none !important; }
-.server-btn { display: none; }
-.server-seleccionado { background-color: #FF7F00 !important; color: #fff !important; }
-.error-message { display: none; color: #FF4444; font-size: 0.875rem; text-align: center; margin-top: 1rem; }
-</style>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-PC9JETB0VP');
-</script>
-<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
-<script src="../access.js"></script>
-</head>
-<body class="text-white font-sans leading-relaxed">
-<div id="contenedor-video" class="relative">
-  <iframe id="iframe-principal" allow="fullscreen" allowfullscreen></iframe>
-  <a href="https://lzrdrz10.github.io/sv/" aria-label="Volver" class="absolute top-3 left-3 text-white text-2xl z-20">
-    <i class="fas fa-arrow-left"></i>
-  </a>
-  <div class="absolute top-0 left-0 w-full h-full z-10" style="pointer-events: none;"></div>
-</div>
-<div class="px-4 pt-60 pb-4 space-y-4">
-  <div class="flex items-center justify-between">
-    <h1 class="text-xl sm:text-2xl font-bold">ted T<span id="temp-titulo">1</span></h1>
-  </div>
-  <div class="flex flex-wrap items-center gap-3 text-sm text-gray-400">
-    <span><strong class="text-[#FF7F00]">7.9</strong> / 10</span>
-    <span class="text-white">•</span>
-    <span>Comedia</span>
-    <span class="text-white">•</span>
-    <span>2024</span>
-  </div>
-  <div class="flex items-center gap-3">
-    <label for="temporada" class="text-sm text-gray-300">Temporada:</label>
-    <select id="temporada" class="bg-[#1f1f1f] text-white px-3 py-1 rounded text-sm">
-      <option value="1">Temporada 1</option>
-    </select>
-  </div>
-  <div class="flex space-x-2 overflow-x-auto scrollbar-hide pb-1" id="lista-capitulos"></div>
-  <div id="servidores" class="flex space-x-2">
-    <button id="server2-btn" class="server-btn px-3 py-1 rounded bg-[#2a2a2a] text-white text-sm">Servidor 2</button>
-    <button id="server3-btn" class="server-btn px-3 py-1 rounded bg-[#2a2a2a] text-white text-sm">Servidor 3</button>
-  </div>
-  <div id="error-message" class="error-message">No hay enlaces disponibles para este episodio.</div>
-  <div class="bg-[#1e1e1e] rounded-lg p-4 text-sm text-gray-300 leading-relaxed">
-    <p><span class="font-semibold text-white">Sinopsis:</span> Ambientada en 1993, tras la secuencia inicial de la primera película, la serie narra los primeros años de vida de un osito de peluche sensible llamado Ted, que vive con John Bennett y su familia en Massachusetts. Además de John y Ted, en la casa de los Bennett viven Matty, el padre de John, Susan, su madre, y su prima Blaire, que vive con ellos mientras asiste a una universidad cercana.</p>
-  </div>
-</div>
-<script>
-(function(_0x1f4b3a,_0x2e5c1d){
-  var _0x4c3e2b=function(_0x5a3f1c){
-    while(--_0x5a3f1c){
-      _0x1f4b3a['push'](_0x1f4b3a['shift']());
-    }
-  };
-  var _0x3b2f4e=function(){
-    var _0x1a3e5f={
-      'data':function(_0x4e2c1b,_0x3f5a2d){
-        return _0x4e2c1b!==_0x3f5a2d;
-      },
-      'action':function(){
-        return'atob';
-      },
-      'value':function(){
-        return'VXNlckx6UGxheQ==';
-      },
-      'store':function(){
-        return'localStorage';
-      },
-      'redirect':function(){
-        return'https://dlz.blogdepelis.lat/';
-      },
-      'message':function(){
-        return'Acceso no permitido. Descarga la aplicacion oficial';
-      },
-      'isSafari':function(){
-        return /Safari/.test(navigator.userAgent) && !/Chrome/.test(navigator.userAgent);
-      }
-    };
-    return _0x1a3e5f;
-  }();
-  _0x4c3e2b(0x1f4);
-  var _0x5e3d2a=_0x3b2f4e;
-  document['addEventListener']('DOMContentLoaded',function(){
-    if(!_0x5e3d2a['isSafari']()){
-      var _0x2d4f1c=_0x5e3d2a['store']();
-      var _0x4b3e2f=window[_0x2d4f1c]['getItem']('accessToken');
-      if(!_0x4b3e2f || _0x5e3d2a['data'](_0x4b3e2f,_0x5e3d2a['action']()(_0x5e3d2a['value']()))){
-        alert(_0x5e3d2a['message']());
-        window['location']['href']=_0x5e3d2a['redirect']();
-      }
-      window[_0x2d4f1c]['removeItem']('accessToken');
-    }
-  });
-})(['push','shift'],0x1f4);
-
-var videosPorCapitulo = {
+{
   "1": {
     "1": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/c8ecj1q8440l",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/idafkhuoti8w",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/bb7opm6i3f4g",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/y85je65lahjr"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/a0sfd591urny"
     },
     "2": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/yj1tzzic6exv",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mawmna03votc",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/kgrz18okfn72",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/zicrinmluwvb"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/fx4a06bc483d"
     },
     "3": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hczmdrp28ksu",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7kd5bhrkx7x6",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/bdqayxo56shl"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/rtn5i5nwix3s"
     },
     "4": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/anmo15fk1nsz",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/0d99tsj0zxwx",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/n4xv2hk63zy5",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/80w59ix9sqzk"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/k1ahcmi7b3d7"
     },
     "5": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/49bpy1qqbccj",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1gh6xjbcvzim",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/p0633c4ofswm",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/96n1fviqvuga"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/phfhx6hcqsr7"
     },
     "6": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/701pyiixv81k",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/kvxt86talnwz",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/uq2qnplx88td",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/q57dawn34itr"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/2jtwzbg2vdxu"
     },
     "7": {
-      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/yur7v7k7ppys",
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mc3lba2dol1d",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/xdo0k7f3uagq",
-      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/wuvopt3hrsvb"
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/1kl91s9ekrzu"
     }
   }
-};
-var serieId = "201834";
-var temporadaSelect = document.getElementById('temporada');
-var listaCapitulos = document.getElementById('lista-capitulos');
-var tempTitulo = document.getElementById('temp-titulo');
-var iframePrincipal = document.getElementById('iframe-principal');
-var server2Btn = document.getElementById('server2-btn');
-var server3Btn = document.getElementById('server3-btn');
-var errorMessage = document.getElementById('error-message');
-
-var serieActual = {
-  id: serieId,
-  titulo: "ted",
-  temporada: temporadaSelect.value,
-  poster: "https://image.tmdb.org/t/p/w500/iKmLCDudQXXOZr16bB7ApT7jXo3.jpg",
-  currentServer: "url1"
-};
-
-function guardarTemporada(temporada) {
-  localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
 }
-
-function cargarTemporadaGuardada() {
-  return localStorage.getItem("temporadaSeleccionada_" + serieId) || "1";
-}
-
-function guardarCapitulo(capitulo) {
-  localStorage.setItem("ultimoCapituloVisto_" + serieId + "_T" + serieActual.temporada, capitulo);
-}
-
-function cargarCapituloGuardado() {
-  var key = "ultimoCapituloVisto_" + serieId + "_T" + serieActual.temporada;
-  var capituloGuardado = localStorage.getItem(key);
-  var botones = listaCapitulos.getElementsByClassName('capitulo-btn');
-  var encontrado = false;
-
-  for (var i = 0; i < botones.length; i++) {
-    botones[i].className = botones[i].className.replace(' capitulo-seleccionado', '');
-    if (botones[i].getAttribute('data-capitulo') === capituloGuardado) {
-      botones[i].className += ' capitulo-seleccionado';
-      botones[i].scrollIntoView({ behavior: 'smooth', inline: 'center' });
-      cambiarVideo(capituloGuardado);
-      encontrado = true;
-    }
-  }
-  if (!encontrado) {
-    cambiarVideo("1");
-  }
-}
-
-function cambiarVideo(capitulo) {
-  var temp = serieActual.temporada;
-  var data = videosPorCapitulo[temp] && videosPorCapitulo[temp][capitulo];
-  errorMessage.style.display = 'none';
-  serieActual.currentServer = "url1";
-  server2Btn.className = server2Btn.className.replace(' server-seleccionado', '');
-  server3Btn.className = server3Btn.className.replace(' server-seleccionado', '');
-  if (data && data.url1 && data.url1.trim() !== '') {
-    iframePrincipal.src = data.url1;
-    server2Btn.style.display = data.url2 && data.url2.trim() !== '' ? 'inline-block' : 'none';
-    server3Btn.style.display = data.url3 && data.url3.trim() !== '' ? 'inline-block' : 'none';
-    guardarCapitulo(capitulo);
-  } else {
-    iframePrincipal.src = '';
-    server2Btn.style.display = 'none';
-    server3Btn.style.display = 'none';
-    errorMessage.style.display = 'block';
-  }
-}
-
-function generarCapitulos(temporada) {
-  listaCapitulos.innerHTML = '';
-  var capitulosObj = videosPorCapitulo[temporada] || {};
-  var total = Object.keys(capitulosObj).length;
-
-  for (var i = 1; i <= total; i++) {
-    var btn = document.createElement('button');
-    btn.className = 'capitulo-btn px-4 py-2 rounded bg-[#2a2a2a] text-white';
-    btn.setAttribute('data-capitulo', i.toString());
-    btn.textContent = i;
-    listaCapitulos.appendChild(btn);
-  }
-  agregarEventosCapitulos();
-  cargarCapituloGuardado();
-}
-
-function agregarEventosCapitulos() {
-  var botones = listaCapitulos.getElementsByClassName('capitulo-btn');
-  for (var i = 0; i < botones.length; i++) {
-    (function(index) {
-      botones[index].onclick = function() {
-        for (var j = 0; j < botones.length; j++) {
-          botones[j].className = botones[j].className.replace(' capitulo-seleccionado', '');
-        }
-        botones[index].className += ' capitulo-seleccionado';
-        botones[index].scrollIntoView({ behavior: 'smooth', inline: 'center' });
-        cambiarVideo(botones[index].getAttribute('data-capitulo'));
-      };
-    })(i);
-  }
-}
-
-server2Btn.onclick = function() {
-  var temp = serieActual.temporada;
-  var seleccionado = listaCapitulos.querySelector('.capitulo-seleccionado');
-  if (seleccionado) {
-    var capitulo = seleccionado.getAttribute('data-capitulo');
-    var data = videosPorCapitulo[temp] && videosPorCapitulo[temp][capitulo];
-    if (data && data.url2 && data.url2.trim() !== '') {
-      serieActual.currentServer = "url2";
-      iframePrincipal.src = data.url2;
-      server2Btn.className += ' server-seleccionado';
-      server3Btn.className = server3Btn.className.replace(' server-seleccionado', '');
-    }
-  }
-};
-
-server3Btn.onclick = function() {
-  var temp = serieActual.temporada;
-  var seleccionado = listaCapitulos.querySelector('.capitulo-seleccionado');
-  if (seleccionado) {
-    var capitulo = seleccionado.getAttribute('data-capitulo');
-    var data = videosPorCapitulo[temp] && videosPorCapitulo[temp][capitulo];
-    if (data && data.url3 && data.url3.trim() !== '') {
-      serieActual.currentServer = "url3";
-      iframePrincipal.src = data.url3;
-      server3Btn.className += ' server-seleccionado';
-      server2Btn.className = server2Btn.className.replace(' server-seleccionado', '');
-    }
-  }
-};
-
-temporadaSelect.onchange = function() {
-  var temp = temporadaSelect.value;
-  serieActual.temporada = temp;
-  tempTitulo.textContent = temp;
-  guardarTemporada(temp);
-  server2Btn.style.display = 'none';
-  server3Btn.style.display = 'none';
-  server2Btn.className = server2Btn.className.replace(' server-seleccionado', '');
-  server3Btn.className = server3Btn.className.replace(' server-seleccionado', '');
-  errorMessage.style.display = 'none';
-  generarCapitulos(temp);
-};
-
-window.onload = function() {
-  var tempGuardada = cargarTemporadaGuardada();
-  temporadaSelect.value = tempGuardada;
-  serieActual.temporada = tempGuardada;
-  tempTitulo.textContent = tempGuardada;
-  generarCapitulos(tempGuardada);
-};
-</script>
-</body>
-</html>
