--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   <img id="lzNotifImg" src="https://image.tmdb.org/t/p/original/dabMTDzhpdYYpkFhHHe7nudDm5g.jpg" alt="" style="width:80px;height:80px;object-fit:cover;border-radius:8px;flex-shrink:0;border:2px solid rgba(255,255,255,0.2);">
   
   <div style="flex:1;min-width:0;">
-    <h2 id="lzNotifTitle" style="font-size:16px;margin:0 0 4px;color:#fff;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">Capítulo T2x10 Disponible "Kaiju No. 8"</h2>
+    <h2 id="lzNotifTitle" style="font-size:16px;margin:0 0 4px;color:#fff;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">T2 Cap. 10 Disponible "Kaiju No. 8"</h2>
     <p id="lzNotifText" style="font-size:13px;color:#ccc;margin:0 0 8px;">"¡Más Kaiju vienen en camino!"</p>
     <button id="lzNotifBtn" style="background:#0066ff;border:none;color:#fff;padding:6px 12px;font-size:13px;border-radius:6px;cursor:pointer;font-weight:bold;">Ver ahora</button>
   </div>
@@ -804,6 +804,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
