--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ted -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dejame Estar Contigo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula741.html">
+    <img src="https://image.tmdb.org/t/p/original/g7CoOjbpKO9tAbQhyJgOB6iwrqV.jpg" alt="Déjame Estar Contigo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Déjame Estar Contigo</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- ted -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie83.html">
     <img src="https://image.tmdb.org/t/p/original/iKmLCDudQXXOZr16bB7ApT7jXo3.jpg" alt="ted" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
