--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El espejo del diablo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dejame Estar Contigo -->
+<li>
+  <a href="../Peliculas/pelicula741.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/g7CoOjbpKO9tAbQhyJgOB6iwrqV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Déjame Estar Contigo 2025</span>
+    <span class="hidden">Lucía vive con una enfermedad incurable, y Bruno fue deportado a México sin un lugar donde dormir. Una inesperada llamada los une en una emotiva historia de superación, reconstrucción y esperanza en donde el amor los llevará a intentar lo imposible para salvarse el uno al otro.</span>
+  </a>
+</li>
+<!--FIN--><!-- El espejo del diablo -->
 <li>
   <a href="../Peliculas/pelicula740.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
