--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dejame Estar Contigo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Conclave -->
+<li>
+  <a href="../Peliculas/pelicula742.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jkOgeASTlWwyKLBNblHVwWmAKhD.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cónclave 2024</span>
+    <span class="hidden">Sigue la historia del cardenal Lawrence, un hombre que tiene la tarea de dirigir un proceso encubierto para la elección de un nuevo Papa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Dejame Estar Contigo -->
 <li>
   <a href="../Peliculas/pelicula741.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
