Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Conclave -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Eternals -->
+<li>
+  <a href="../Peliculas/pelicula743.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wPZ5n5LlzFFdO5lFJbi2qmaE6w7.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Eternals 2021</span>
+    <span class="hidden">Los Eternos son una raza inmortal de héroes de elite que han vivido en secreto en la Tierra durante años para proteger y formar a las civilizaciones. Una tragedia inesperada los obliga a salir de las sombras para reunirse y enfrentarse al enemigo más antiguo del hombre: los Desviantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Conclave -->
 <li>
   <a href="../Peliculas/pelicula742.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
