Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Eternals -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matilda -->
+<li>
+  <a href="../Peliculas/pelicula744.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/icsytUzUc9f97a9SdafFG0eqijR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Matilda 1996</span>
+    <span class="hidden">La historia de una maravillosa niña, que resulta ser una genio, y su maravillosa profesora contra los peores padres de la historia y la peor directora de escuela que nadie se pueda imaginar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Eternals -->
 <li>
   <a href="../Peliculas/pelicula743.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
