Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matilda -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- No te metas con Zohan -->
+<li>
+  <a href="../Peliculas/pelicula745.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7e5W4a4goRSE4uaJ8BpB84DU8c5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">No te metas con Zohan 2008</span>
+    <span class="hidden">Un soldado de las fuerzas especiales israelíes finge su muerte para poder resurgir en Nueva York como estilista.</span>
+  </a>
+</li>
+<!--FIN--><!-- Matilda -->
 <li>
   <a href="../Peliculas/pelicula744.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
