Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -121,7 +121,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla vs Kong -->
+<li>
+  <a href="../Peliculas/pelicula748.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yJTk4eqQd9Yo5REpFbTSOMkbSgn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla vs Kong 2021</span>
+    <span class="hidden">En un momento en que los monstruos caminan por la Tierra, la lucha de la humanidad por su futuro coloca a Godzilla y Kong en un curso de colisión que verá a las dos fuerzas más poderosas de la naturaleza en el planeta enfrentarse en una batalla espectacular para las edades. Mientras Monarch se embarca en una peligrosa misión en un terreno inexplorado y descubre pistas sobre los orígenes de los Titanes, una conspiración humana amenaza con borrar a las criaturas, tanto buenas como malas, de la faz de la tierra para siempre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla -->
 <li>
   <a href="../Peliculas/pelicula747.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
