Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla vs Kong -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Shaolin Soccer -->
+<li>
+  <a href="../Peliculas/pelicula749.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gMqHA1CoURwncG1iKBukFtTCSrG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Shaolin Soccer 2001</span>
+    <span class="hidden">Sing es un discipulo del Shaolin cuya ambición es popularizar el kung fu en la sociedad moderna. Un día se encontrará con Fung, antiguo futbolista fracasado. Ambos tendrán la idea de formar un equipo que mezcle fútbol con artes marciales.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla vs Kong -->
 <li>
   <a href="../Peliculas/pelicula748.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
