--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   <div class="flex space-x-3 overflow-x-auto py-2 scrollbar-hide" aria-label="Logos de servicios de streaming">
     
     <a href="Plataforma/primevideo/index.html" class="flex-shrink-0 w-16 h-16 rounded-full overflow-hidden shadow-md hover:scale-105 transition-transform">
-      <img class="w-full h-full object-cover" src="https://images.bhaskarassets.com/web2images/521/2023/06/16/ezgifcom-video-to-gif-2023-06-16t155541854_1686911269.gif" alt="Prime Video" loading="lazy" />
+      <img class="w-full h-full object-cover" src="https://media1.tenor.com/m/jRIcyhRf9YYAAAAd/amazon-prime-video.gif" alt="Prime Video" loading="lazy" />
     </a>
 
     <a href="Plataforma/hbomax/index.html" class="flex-shrink-0 w-16 h-16 rounded-full overflow-hidden shadow-md hover:scale-105 transition-transform">
@@ -227,7 +227,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     </a>
 
     <a href="Plataforma/universal/index.html" class="flex-shrink-0 w-16 h-16 rounded-full overflow-hidden shadow-md hover:scale-105 transition-transform">
-      <img class="w-full h-full object-cover" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/142139c3-1676-4373-ba59-a07246d6da00/dfwbvkq-65215b76-05ec-436d-b88d-3e76d690300c.gif" alt="Universal" loading="lazy" />
+      <img class="w-full h-full object-cover" src="https://media.tenor.com/OdgGp8mgHn4AAAAM/universal-pictures-logo.gif" alt="Universal" loading="lazy" />
     </a>
 
     <a href="Plataforma/warnerbros/index.html" class="flex-shrink-0 w-16 h-16 rounded-full overflow-hidden shadow-md hover:scale-105 transition-transform">
@@ -804,3 +804,4 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
