Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Shaolin Soccer -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla y Kong: El nuevo imperio -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula750.html">
+    <img src="https://image.tmdb.org/t/p/original/2YqZ6IyFk7menirwziJvfoVvSOh.jpg" alt="Godzilla y Kong: El nuevo imperio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Godzilla y Kong: El nuevo imperio</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Shaolin Soccer -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula749.html">
     <img src="https://image.tmdb.org/t/p/original/gMqHA1CoURwncG1iKBukFtTCSrG.jpg" alt="Shaolin Soccer" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
