Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla 1 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- King Kong contra Godzilla -->
+<li>
+  <a href="../Peliculas/pelicula752.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/m5x0lEpwN5m0VDvpdKeLESXspgf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">King Kong contra Godzilla 1962</span>
+    <span class="hidden">Versión japonésa. Tako, el director de publicidad de Pacific Pharmaceuticals, está frustrado con los ratings de su programa patrocinado. Buscando una sensacion, ordena un expedición a la isla de Faro y captura a King Kong para usarlo como publicidad. Cuando Godzilla aparece, se genera un frenesí mediático que Tako busca de sacar provecho con el combate de lucha libre mas grande del mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla 1 -->
 <li>
   <a href="../Peliculas/pelicula751.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
