Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- King Kong contra Godzilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla contra Mothra -->
+<li>
+  <a href="../Peliculas/pelicula753.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qbW9Ww77rl4zsLR05ouERk3PXaL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla contra Mothra 1964</span>
+    <span class="hidden">Periodistas Ichiro Sakai y Junko reportan en la secuelas de un tifón cuando un huevo gigantesco es encontrado y comprado por empresarios codiciosos. Las hadas de Mothra llegan para súplica por su regreso con la ayudada de los periodistas. Con sus solicitudes negados, Godzilla apparece en Nagoya, y la gente de la Isla Mothra debe decidir si están dispuestos a ayudar a Japón.</span>
+  </a>
+</li>
+<!--FIN--><!-- King Kong contra Godzilla -->
 <li>
   <a href="../Peliculas/pelicula752.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
