Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla contra Mothra -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La invasion de los astromonstruos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula754.html">
+    <img src="https://image.tmdb.org/t/p/original/u4z09YOXnOLyw2Vk0pBXbwGbMU4.jpg" alt="La invasión de los astromonstruos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La invasión de los astromonstruos</div>
+  <div class="text-xs text-white/70">1965</div>
+</article><!-- Godzilla contra Mothra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula753.html">
     <img src="https://image.tmdb.org/t/p/original/qbW9Ww77rl4zsLR05ouERk3PXaL.jpg" alt="Godzilla contra Mothra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
