Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla contra Mothra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La invasion de los astromonstruos -->
+<li>
+  <a href="../Peliculas/pelicula754.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/u4z09YOXnOLyw2Vk0pBXbwGbMU4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La invasión de los astromonstruos 1965</span>
+    <span class="hidden">Los astronautas Glenn y Fuji investigan el Planeta X cuando encuentran alienígenas misteriosos llamado los Xiliens. Piden a la humanidad prestar Godzilla y Rodan para salvar su mundo del "Monstruo Cero". Mientras Glenn investiga, se enamora con la señorita Namikawa y descubre las verdaderas intenciones de los Xiliens.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla contra Mothra -->
 <li>
   <a href="../Peliculas/pelicula753.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
