Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La invasion de los astromonstruos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hijo de Godzilla -->
+<li>
+  <a href="../Peliculas/pelicula755.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5xWpZ1wKoXmnLpRVevvvMbg2IMZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El hijo de Godzilla 1967</span>
+    <span class="hidden">En una isla tropical, unos científicos dirigen experimentos meteorológicos con el fin de acabar con el problema de hambruna mundial, pero todo se ve frustrado cuando debido a una falla en el experimento, fuertes lluvias radiactivas y consecuentemente una ola de calor insoportable envuelve la isla, esto también causa que los insectos que habitan en la isla se vuelven gigantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- La invasion de los astromonstruos -->
 <li>
   <a href="../Peliculas/pelicula754.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
