Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla 2: El rey de los Monstruos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Aventuras de Pinocho -->
+<li>
+  <a href="../Peliculas/pelicula758.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rGPFPkUmPam6arT22ey8jWpKzL2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las Aventuras de Pinocho 1996</span>
+    <span class="hidden">Geppetto vive solo en una pequeña ciudad italiana. Su única compañía son las marionetas que fabrica con la madera de un bosque cercano, el mismo en el que un día talló en un tronco un corazón con su inicial y la de su amada Leone. Precisamente con ese tronco, Geppetto decide hacer su obra más bella: un muñeco tan perfecto que cobra vida y se convierte en su hijo, el travieso Pinocho.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla 2: El rey de los Monstruos -->
 <li>
   <a href="../Peliculas/pelicula757.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
